--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/rainier?schema=public"
+DATABASE_URL="postgresql://postgres:2NvlnKK3NmzcGDwb@db.tiuelftxfabilciciniw.supabase.co:5432/postgres"
 NODE_ENV=development
 JWT_EXPIRES_IN=1d
 JWT_REFRESH_EXPIRES_IN=30d
@@ -6,3 +6,4 @@ JWT_REFRESH_SECRET=jwtttttttttttttt-refres
 JWT_SECRET=jwtttttttttttttttt
 SAULT_ROUNDS=12
 
+# 2NvlnKK3NmzcGDwb
